c/tskit/trees.h


typedef struct {
    tsk_size_t num_trees;
    tsk_size_t num_samples;
    tsk_id_t *samples;
    bool time_uncalibrated;
    bool discrete_genome;
    bool discrete_time;
    double min_time;
    double max_time;
    double *breakpoints;
    tsk_id_t *sample_index_map;
    tsk_id_t *individual_nodes_mem;
    tsk_id_t **individual_nodes;
    tsk_size_t *individual_nodes_length;
    tsk_site_t *tree_sites_mem;
    tsk_site_t **tree_sites;
    tsk_size_t *tree_sites_length;
    tsk_mutation_t *site_mutations_mem;
    tsk_mutation_t **site_mutations;
    tsk_size_t *site_mutations_length;
    tsk_table_collection_t *tables;
} tsk_treeseq_t;
typedef struct {
    tsk_id_t index;
    struct {
        double left;
        double right;
    } interval;
    struct {
        tsk_id_t start;
        tsk_id_t stop;
        const tsk_id_t *order;
    } in;
    struct {
        tsk_id_t start;
        tsk_id_t stop;
        const tsk_id_t *order;
    } out;
    tsk_id_t left_current_index;
    tsk_id_t right_current_index;
    int direction;
    const tsk_treeseq_t *tree_sequence;
} tsk_tree_position_t;
typedef struct {
    const tsk_treeseq_t *tree_sequence;
    tsk_id_t virtual_root;
    tsk_id_t *parent;
    tsk_id_t *left_child;
    tsk_id_t *right_child;
    tsk_id_t *left_sib;
    tsk_id_t *right_sib;
    tsk_id_t *num_children;
    tsk_id_t *edge;
    tsk_size_t num_edges;
    struct {
        double left;
        double right;
    } interval;
    tsk_id_t index;
    tsk_size_t num_nodes;
    tsk_flags_t options;
    tsk_size_t root_threshold;
    const tsk_id_t *samples;
    tsk_size_t *num_samples;
    tsk_size_t *num_tracked_samples;
    tsk_id_t *left_sample;
    tsk_id_t *right_sample;
    tsk_id_t *next_sample;
    const tsk_site_t *sites;
    tsk_size_t sites_length;
    int direction;
    tsk_id_t left_index;
    tsk_id_t right_index;
    tsk_tree_position_t tree_pos;
} tsk_tree_t;
int tsk_treeseq_init(
    tsk_treeseq_t *self, tsk_table_collection_t *tables, tsk_flags_t options);
int tsk_treeseq_free(tsk_treeseq_t *self);
int tsk_tree_init(
    tsk_tree_t *self, const tsk_treeseq_t *tree_sequence, tsk_flags_t options);
int tsk_tree_free(tsk_tree_t *self);
int tsk_tree_first(tsk_tree_t *self);
int tsk_tree_last(tsk_tree_t *self);
int tsk_tree_next(tsk_tree_t *self);
int tsk_tree_prev(tsk_tree_t *self);
tsk_size_t tsk_tree_get_num_roots(const tsk_tree_t *self);