c/tskit/tables.h


typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t location_length;
    tsk_size_t max_location_length;
    tsk_size_t max_location_length_increment;
    tsk_size_t parents_length;
    tsk_size_t max_parents_length;
    tsk_size_t max_parents_length_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    tsk_flags_t *flags;
    double *location;
    tsk_size_t *location_offset;
    tsk_id_t *parents;
    tsk_size_t *parents_offset;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_individual_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    tsk_flags_t *flags;
    double *time;
    tsk_id_t *population;
    tsk_id_t *individual;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_node_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    double *left;
    double *right;
    tsk_id_t *parent;
    tsk_id_t *child;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
    tsk_flags_t options;
} tsk_edge_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    tsk_id_t *source;
    tsk_id_t *dest;
    tsk_id_t *node;
    double *left;
    double *right;
    double *time;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_migration_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t ancestral_state_length;
    tsk_size_t max_ancestral_state_length;
    tsk_size_t max_ancestral_state_length_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    double *position;
    char *ancestral_state;
    tsk_size_t *ancestral_state_offset;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_site_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t derived_state_length;
    tsk_size_t max_derived_state_length;
    tsk_size_t max_derived_state_length_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    tsk_id_t *node;
    tsk_id_t *site;
    tsk_id_t *parent;
    double *time;
    char *derived_state;
    tsk_size_t *derived_state_offset;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_mutation_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t metadata_length;
    tsk_size_t max_metadata_length;
    tsk_size_t max_metadata_length_increment;
    tsk_size_t metadata_schema_length;
    char *metadata;
    tsk_size_t *metadata_offset;
    char *metadata_schema;
} tsk_population_table_t;
typedef struct {
    tsk_size_t num_rows;
    tsk_size_t max_rows;
    tsk_size_t max_rows_increment;
    tsk_size_t timestamp_length;
    tsk_size_t max_timestamp_length;
    tsk_size_t max_timestamp_length_increment;
    tsk_size_t record_length;
    tsk_size_t max_record_length;
    tsk_size_t max_record_length_increment;
    char *timestamp;
    tsk_size_t *timestamp_offset;
    char *record;
    tsk_size_t *record_offset;
} tsk_provenance_table_t;
typedef struct {
    char *data;
    tsk_size_t data_length;
    char *url;
    tsk_size_t url_length;
    char *metadata;
    tsk_size_t metadata_length;
    char *metadata_schema;
    tsk_size_t metadata_schema_length;
} tsk_reference_sequence_t;
typedef struct {
    double sequence_length;
    char *file_uuid;
    char *time_units;
    tsk_size_t time_units_length;
    char *metadata;
    tsk_size_t metadata_length;
    char *metadata_schema;
    tsk_size_t metadata_schema_length;
    tsk_reference_sequence_t reference_sequence;
    tsk_individual_table_t individuals;
    tsk_node_table_t nodes;
    tsk_edge_table_t edges;
    tsk_migration_table_t migrations;
    tsk_site_table_t sites;
    tsk_mutation_table_t mutations;
    tsk_population_table_t populations;
    tsk_provenance_table_t provenances;
    struct {
        tsk_id_t *edge_insertion_order;
        tsk_id_t *edge_removal_order;
        tsk_size_t num_edges;
    } indexes;
} tsk_table_collection_t;
int tsk_table_collection_build_index(tsk_table_collection_t *self, tsk_flags_t options);